--- a/app/src/main/res/navigation/nav_garden.xml
+++ b/app/src/main/res/navigation/nav_garden.xml
@@ -1,10 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/nav_garden"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/nav_garden"
     app:startDestination="@id/homeFragment">
 
     <fragment
+        tools:layout="@layout/fragment_home"
         android:id="@+id/homeFragment"
         android:name="com.zxj.wukong.ui.fragments.HomeFragment"
-        android:label="HomeFragment" />
+        android:label="HomeFragment" >
+        <action
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right"
+            android:id="@+id/action_homeFragment_to_caseDescFragment"
+            app:destination="@id/caseDescFragment" />
+    </fragment>
+    <fragment
+        tools:layout="@layout/fragment_desc"
+        android:id="@+id/caseDescFragment"
+        android:name="com.zxj.wukong.ui.fragments.CaseDescFragment"
+        android:label="CaseDescFragment" />
 </navigation>
