--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -2,28 +2,19 @@
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
+    android:fitsSystemWindows="false"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar"
-        android:fitsSystemWindows="true"
         android:layout_width="match_parent"
-        android:layout_height="300dp">
-        <com.google.android.material.appbar.CollapsingToolbarLayout
-            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-        <com.google.android.material.appbar.MaterialToolbar
-            android:layout_width="match_parent"
-            android:layout_height="?actionBarSize"/>
-        </com.google.android.material.appbar.CollapsingToolbarLayout>
+        android:layout_height="180dp">
+        <include
+            android:id="@+id/header_layout"
+            layout="@layout/home_header_layout"
+            />
     </com.google.android.material.appbar.AppBarLayout>
-    <include
 
-        android:id="@+id/header_layout"
-        layout="@layout/home_header_layout"
-        />
 <androidx.recyclerview.widget.RecyclerView
     android:background="@android:color/white"
     app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
