--- a/app/src/main/res/layout/home_header_layout.xml
+++ b/app/src/main/res/layout/home_header_layout.xml
@@ -1,19 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.zxj.wukong.ui.views.CollapsibleToolbar xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="300dp"
-    app:layout_behavior="com.zxj.wukong.ui.utils.HomeHeaderBehavior"
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    android:minHeight="40dp"
+    android:id="@+id/header_layout"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
-    <include
-        android:id="@+id/search_toolbar"
-        layout="@layout/search_toolbar_layout"/>
+    xmlns:tools="http://schemas.android.com/tools"
+    app:layout_scrollFlags="scroll|enterAlways|snap|exitUntilCollapsed"
+    app:layoutDescription="@xml/home_motion_scene">
+
+    <ImageView
+        android:id="@+id/search_view"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:layout_marginEnd="@dimen/margin_normal"
+        android:src="@mipmap/icon_search"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
     <ImageView
         android:id="@+id/header_iv"
         android:src="@mipmap/icon_head"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/search_toolbar"
+        app:layout_constraintTop_toBottomOf="@+id/search_view"
         android:layout_width="56dp"
         android:layout_height="56dp"/>
     <TextView
@@ -27,10 +37,11 @@
         style="@style/TextNormalStyle" />
 
     <TextView
-        tools:text= "desc"
+        android:id="@+id/desc_tv"
+        style="@style/TextNormalStyle"
         android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/user_tv"
-        style="@style/TextNormalStyle" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        tools:text="desc" />
+</com.zxj.wukong.ui.views.CollapsibleToolbar >
