购物车动画 体验, 需要把复制view 加到上层layout 中,否则在动画移动的时候会出现遮挡

--- a/app/src/main/res/layout/home_header_layout.xml
+++ b/app/src/main/res/layout/home_header_layout.xml
@@ -27,6 +27,7 @@
         android:layout_width="56dp"
         android:layout_height="56dp"/>
     <TextView
+        android:text="zxj"
         android:maxLines="1"
         tools:text= "user"
         android:layout_marginTop="16dp"
