--- a/app/src/main/res/layout/item_case.xml
+++ b/app/src/main/res/layout/item_case.xml
@@ -8,36 +8,38 @@
             type="com.zxj.wukong.data.CaseInfo"/>
     </data>
 
-    <FrameLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:paddingStart="8dp"
+        android:paddingEnd="8dp"
+        android:clipChildren="false"
+        android:clipToPadding="false"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <ImageView
+            app:layout_constraintTop_toTopOf="parent"
+            android:id="@+id/imageView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="120dp"
+            app:imageFromUrl="@{caseInfo.snapshotUrl}" />
 
-            <ImageView
-                app:layout_constraintTop_toTopOf="parent"
-                android:id="@+id/imageView"
-                android:layout_width="match_parent"
-                android:layout_height="120dp"
-                app:imageFromUrl="@{caseInfo.snapshotUrl}" />
+        <TextView
+            android:layout_marginTop="4dp"
+            app:layout_constraintTop_toBottomOf="@id/imageView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-medium"
+            android:text="@{caseInfo.name,default=sss}" />
 
-            <TextView
-                app:layout_constraintTop_toBottomOf="@id/imageView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="sans-serif-medium"
-                android:text="@{caseInfo.name,default=sss}" />
-
-            <ImageView
-                android:src="@mipmap/icon_add"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/imageView"
-                android:id="@+id/add_view"
-                android:layout_width="30dp"
-                android:layout_height="30dp"/>
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </FrameLayout>
+        <ImageView
+            android:layout_marginTop="4dp"
+            android:translationZ="1dp"
+            android:src="@mipmap/icon_add"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/imageView"
+            android:id="@+id/add_view"
+            android:layout_width="25dp"
+            android:layout_height="25dp"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
