--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -34,13 +34,16 @@
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
-    <ImageView
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/shopcar_iv"
+        app:fabCustomSize="45dp"
+        android:backgroundTint="@android:color/white"
+        android:src="@mipmap/icon_shopcar"
         android:layout_marginStart="@dimen/margin_normal"
         android:layout_marginBottom="@dimen/margin_normal"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_width="45dp"
-        android:layout_height="45dp"
-        android:src="@mipmap/icon_shopcar" />
+        android:layout_height="45dp"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
