--- a/app/src/main/res/layout/item_shopping_cart.xml
+++ b/app/src/main/res/layout/item_shopping_cart.xml
@@ -14,6 +14,8 @@
     android:layout_marginEnd="@dimen/margin_normal">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="4dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
