搜索页面简写,简单体验下协程

--- a/app/src/main/res/navigation/nav_garden.xml
+++ b/app/src/main/res/navigation/nav_garden.xml
@@ -24,15 +24,28 @@
             app:popExitAnim="@anim/slide_out_right"
             android:id="@+id/action_homeFragment_to_shoppingCartFragment"
             app:destination="@id/shopingCartFragment" />
+        <action
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right"
+            android:id="@+id/action_homeFragment_to_searchFragment"
+            app:destination="@id/searchFragment" />
     </fragment>
     <fragment
         tools:layout="@layout/fragment_shoppingcart"
         android:id="@+id/shopingCartFragment"
         android:name="com.zxj.wukong.ui.fragments.ShoppingCarFragment"
-        android:label="shopingCartFragment" />
+        android:label="shopingCartFragment"/>
+
     <fragment
         tools:layout="@layout/fragment_desc"
         android:id="@+id/caseDescFragment"
         android:name="com.zxj.wukong.ui.fragments.CaseDescFragment"
         android:label="CaseDescFragment" />
+    <fragment
+        tools:layout="@layout/fragment_search"
+        android:id="@+id/searchFragment"
+        android:name="com.zxj.wukong.ui.fragments.SearchFragment"
+        android:label="searchFragment" />
 </navigation>
